--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,17 +2,17 @@
 <html lang="en-us"
   dir="ltr">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 
 
 
-<link rel="icon" type="image/ico" href="http://localhost:1313//favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313//favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313//favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="192x192" href="http://localhost:1313//android-chrome-192x192.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://localhost:1313//apple-touch-icon.png">
+<link rel="icon" type="image/ico" href="https://tomfran.github.io//favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://tomfran.github.io//favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://tomfran.github.io//favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="https://tomfran.github.io//android-chrome-192x192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://tomfran.github.io//apple-touch-icon.png">
 
 <meta name="description" content="Clarence a software engineer based in Paris"/>
 
@@ -24,9 +24,9 @@
     
 </title>
 
-<link rel="canonical" href="http://localhost:1313/about/"/>
+<link rel="canonical" href="https://tomfran.github.io/about/"/>
 
-<meta property="og:url" content="http://localhost:1313/about/">
+<meta property="og:url" content="https://tomfran.github.io/about/">
   <meta property="og:site_name" content="Clarence Dimitri">
   <meta property="og:title" content="About">
   <meta property="og:description" content="Clarence a software engineer based in Paris">
@@ -45,6 +45,18 @@
 
 
 <link rel="stylesheet" href="/assets/combined.min.3f9d86403a52fd4680e96b46e5cc687811b3dce2009c2e43d25b266187171957.css" media="all">
+
+
+
+
+
+
+<script
+  async
+  defer
+  data-website-id="cc219028-551e-4f3b-bbc7-e124ca907ce0"
+  src="https://cloud.umami.is/script.js"
+></script>
 
 
 
@@ -69,7 +81,7 @@
     
 
     <h1 class="header-title">
-        <a href="http://localhost:1313/">Clarence Dimitri</a>
+        <a href="https://tomfran.github.io/">Clarence Dimitri</a>
     </h1>
 
     <div class="flex">
